--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.4.6",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.19",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
