--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
+    "axios": "^1.7.7",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.19",
     "moment": "^2.30.1",
