--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.19",
@@ -25,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "yup": "^1.4.0"
   },
