--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.19",
+    "fuse.js": "^7.0.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
