changes for deployment

--- a/backend/api-common-parameters/src/main/resources/application.properties
+++ b/backend/api-common-parameters/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=api-common-parameters
 server.port=8088
 server.servlet.context-path=/common-parameter
 
-# Configuración de MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/codeChallenge
+# Configuraciï¿½n de MongoDB
+spring.data.mongodb.uri=mongodb+srv://${MONGO_DB_USERNAME}:${MONGO_DB_PASSWORD}@${MONGO_DB_HOST}/${MONGO_DB_NAME}
 
-# Consola de administración de MongoDB
+# Consola de administraciï¿½n de MongoDB
 spring.data.mongodb.database=codeChallenge
 
