--- a/backend/api-user-management/src/main/resources/application.properties
+++ b/backend/api-user-management/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=api-user-management
 server.port=8087
 server.servlet.context-path=/user-management
 
-# Configuración de MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/codeChallenge
+# Configuraciï¿½n de MongoDB
+spring.data.mongodb.uri=mongodb+srv://${MONGO_DB_USERNAME}:${MONGO_DB_PASSWORD}@${MONGO_DB_HOST}/${MONGO_DB_NAME}
 
-# Consola de administración de MongoDB
+# Consola de administraciï¿½n de MongoDB
 spring.data.mongodb.database=codeChallenge
